; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/lib/extr_openssl.c_x9_62_init_key.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/lib/extr_openssl.c_x9_62_init_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_x9_62_keyex_context_t = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32**, i32*)* @x9_62_init_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @x9_62_init_key(i32* %0, i32** %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.st_x9_62_keyex_context_t*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  store i32* %2, i32** %6, align 8
  store %struct.st_x9_62_keyex_context_t* null, %struct.st_x9_62_keyex_context_t** %7, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @x9_62_create_context(i32* %9, %struct.st_x9_62_keyex_context_t** %7)
  store i32 %10, i32* %8, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  br label %22

13:                                               ; preds = %3
  %14 = load i32*, i32** %6, align 8
  %15 = load %struct.st_x9_62_keyex_context_t*, %struct.st_x9_62_keyex_context_t** %7, align 8
  %16 = getelementptr inbounds %struct.st_x9_62_keyex_context_t, %struct.st_x9_62_keyex_context_t* %15, i32 0, i32 1
  store i32* %14, i32** %16, align 8
  %17 = load %struct.st_x9_62_keyex_context_t*, %struct.st_x9_62_keyex_context_t** %7, align 8
  %18 = call i32 @x9_62_setup_pubkey(%struct.st_x9_62_keyex_context_t* %17)
  store i32 %18, i32* %8, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %13
  br label %22

21:                                               ; preds = %13
  store i32 0, i32* %8, align 4
  br label %22

22:                                               ; preds = %21, %20, %12
  %23 = load i32, i32* %8, align 4
  %24 = icmp eq i32 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %22
  %26 = load %struct.st_x9_62_keyex_context_t*, %struct.st_x9_62_keyex_context_t** %7, align 8
  %27 = getelementptr inbounds %struct.st_x9_62_keyex_context_t, %struct.st_x9_62_keyex_context_t* %26, i32 0, i32 0
  %28 = load i32**, i32*** %5, align 8
  store i32* %27, i32** %28, align 8
  br label %37

29:                                               ; preds = %22
  %30 = load %struct.st_x9_62_keyex_context_t*, %struct.st_x9_62_keyex_context_t** %7, align 8
  %31 = icmp ne %struct.st_x9_62_keyex_context_t* %30, null
  br i1 %31, label %32, label %35

32:                                               ; preds = %29
  %33 = load %struct.st_x9_62_keyex_context_t*, %struct.st_x9_62_keyex_context_t** %7, align 8
  %34 = call i32 @x9_62_free_context(%struct.st_x9_62_keyex_context_t* %33)
  br label %35

35:                                               ; preds = %32, %29
  %36 = load i32**, i32*** %5, align 8
  store i32* null, i32** %36, align 8
  br label %37

37:                                               ; preds = %35, %25
  %38 = load i32, i32* %8, align 4
  ret i32 %38
}

declare dso_local i32 @x9_62_create_context(i32*, %struct.st_x9_62_keyex_context_t**) #1

declare dso_local i32 @x9_62_setup_pubkey(%struct.st_x9_62_keyex_context_t*) #1

declare dso_local i32 @x9_62_free_context(%struct.st_x9_62_keyex_context_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
